# src/router/index.js
@@ -1,11 +1,13 @@
 const auth = require("./auth");
 const requests = require("./requests");
 const booking = require("./booking");
+const user = require("./user");
 const router = require("express").Router();
 
 
 router.use("/auth", auth);
 router.use("/requests", requests);
 router.use("/booking", booking);
+router.use("/user", user);
 
 module.exports = router;
